[project]
name = "Badass Rank Lock"
version = "2.0.0"
authors = [{name = "Siggles"}]
description = "Prevents badass rank increasing, and non-level-specific challenge reward pop-ups from showing."

[tool.sdkmod]
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
#supported_games = ["BL2", "TPS", "AoDK"]
