[project]
name = "ControllerBinds"
version = "1.0.1"
authors = [{name = "Siggles"}]
description = """Adds controller combo binds for any mod keybinds, plus a menu button for the mod menu.
\n
All controller binds are set in <font color='#00ffe8'>this mod's</font> keybind options.
"""

[tool.sdkmod]
name = "Controller Binds"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = "https://github.com/Siggless/bl-sdk-mods/raw/refs/heads/main/ControllerBinds/ControllerBinds.sdkmod"
