[project]
name = "Jump To Level Challenges"
version = "2.0.0"
authors = [{name = "Siggles"}]
description = "Adds a keybind to the Challenges menu to jump to the current level's challenges."

[tool.sdkmod]
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = "https://github.com/Siggless/bl-sdk-mods/raw/refs/heads/main/JumpToLevelChallenges/JumpToLevelChallenges.sdkmod"
